# emacs

./: .gitignore  CLAUDE.md  config.el  config.org  custom.el  init.el  orgbabelpython.el  orgmode.el  packages.el  paxedit.el
bashscripts/: Elles-MBP-default-python-env.txt  convert_odt_to_org.sh  convert_org_to_ipynb_precommit_hook.sh  convertnotebooks.sh  converttoipynb.sh  directoryastext.sh  etude-default-python-env.txt  mirror_org_as_html.sh  publish_on_commit.sh  temp.txt
computers/: Elles-MBP-after.el  Elles-MBP-packages.el  Elles-MBP.el  aria-packages.el  aria.el  etude.el  fugue-packages.el  fugue.el  mcp.el  personal_common.el  personal_packages.el  treesitter.el
configs/: combobulate-config.el  magit.el  orgmode.el  orgmotions.el
configs/org-evil/: org-evil-commands.el
experimental/: config.org  indedit.el  treesitterexperiments.el  vim-org.el
gslides/: README.md  org-google.el  org-to-google.py  pyproject.toml
keyboard/kinesis/: layout1.txt  led1.txt  notes.org
mcp/: claude-code-auto-revert-hook.el
org-templates/: document_export.org  standard.org  webpage_headers.org
org-templates/auto_generated_ipynbs/: document_export.ipynb  standard.ipynb  webpage_headers.ipynb
patches/: gptel-claude-cli.el
project_defaults/rust/: .dir-locals.el  shell.nix
python/nix_project_defaults/: .dir-locals.el  scratch.org  shell.nix
python/project_defaults/: .envrc  pyproject.toml  requirements.txt  scratch.org
python/pymockbabel/: basic_test.py  orgbabeltesting.org  print_org_df.py  pymockbabel.py  (+4 more)
tests/: babel-formatting.org  babel_formatting.org
(+19 files in other folders)
