[project]
name = "project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Core data science & ML
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",

    # Machine Learning
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",

    # Development tools
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ipython>=8.12.0",
    "ipdb>=0.13.0",

    # Code quality
    "ruff>=0.1.0",

    # Utilities
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",

    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
